// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with description and no title 1`] = `
<div>
  <fieldset>
    <p>
      title
    </p>
    <div />
  </fieldset>
</div>
`;

exports[`renders with no title or description 1`] = `
<div>
  <fieldset>
    <div />
  </fieldset>
</div>
`;

exports[`renders with title and description 1`] = `
<div>
  <fieldset>
    <legend>
      title
    </legend>
    <p>
      description
    </p>
    <div />
  </fieldset>
</div>
`;

exports[`renders with title and no description 1`] = `
<div>
  <fieldset>
    <legend>
      title
    </legend>
    <div />
  </fieldset>
</div>
`;
